--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-background-video": "^2.0.0",
+    "react-background-video-player": "^1.1.8",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
